# lewis

./: .gitignore  CMakeLists.txt  LICENSE.txt  Lewis.sln  Lewis.vcxproj  README.md  Ray.cpp  Ray.h  camera.cpp  camera.h  hitable.h  hitablelist.cpp  hitablelist.h  main.cpp  ppmwriter.cpp  ppmwriter.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
